--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,17 @@
 name = "opencv-dep-test"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.59"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-#[dependencies]
-#opencv = "0.76.4"
+[dependencies]
+opencv = "0.84.5"
 
-[dependencies.opencv]
-version = "0.76.4"
-package = 'opencv'
-default-features = false
-features = ['videoio', 'imgproc', 'highgui']
-optional = false
+#[dependencies.opencv]
+#version = "0.76.4"
+#package = 'opencv'
+#default-features = false
+#features = ['videoio', 'imgproc', 'highgui']
+#optional = false
 
