--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ rust-version = "1.59"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-opencv = "0.84.5"
+#[dependencies]
+#opencv = "0.84.5"
 
-#[dependencies.opencv]
-#version = "0.76.4"
-#package = 'opencv'
-#default-features = false
-#features = ['videoio', 'imgproc', 'highgui']
-#optional = false
+[dependencies.opencv]
+version = "0.84.5"
+package = 'opencv'
+default-features = false
+features = ['videoio', 'imgproc', 'highgui']
+optional = false
 
